--- a/cv.html
+++ b/cv.html
@@ -10,7 +10,7 @@
 
   <div class="header">
     <h1>Curriculum Vitae</h1>
-    <img src="zahra.jpg" alt="Foto Zahra Denisa Salsabila">
+    <img src="zahra.jpg" alt="Foto Zahra Denisa Salsabila" width="150">
     <h2>Zahra Denisa Salsabila</h2>
     <p>Mahasiswi S1 Sistem Informasi • Universitas Telkom</p>
   </div>
@@ -18,12 +18,14 @@
 
   <section>
     <h2>Data Pribadi</h2>
-    <p><b></b>Nama:</b> Zahra Denisa Salsabila</p>
+    <p><b>Nama:</b> Zahra Denisa Salsabila</p>
     <p><b>Tempat, Tanggal Lahir:</b> Bekasi, 12 Januari 2006</p>
     <p><b>Alamat:</b> Jl. Telekomunikasi No. 1, Bandung, Jawa Barat</p>
     <p><b>Email:</b> zhradenisa1201@gmail.com</p>
     <p><b>No HP:</b> 0857-8212-2850</p>
-    <p><b>Instagram:</b> @zhradenisa</p>
+    <p><b>Instagram:</b> 
+      <a href="https://www.instagram.com/zhradenisa" target="_blank">@zhradenisa</a>
+    </p>
   </section>
 
   <section>
@@ -45,7 +47,6 @@
       <p><b>OSIS (Bidang Kreativitas & Kewirausahaan)</b> — Anggota, 2021–2022</p>
       <p><b>Lomba Bisnis Plan</b> — Tim, 2024</p>
       <p><b>Komunitas KOALISI (Komunitas Sosial Sistem Informasi)</b> — Anggota, 2025 – Sekarang</p>
- 
   </section>
 
   <section>
@@ -55,14 +56,12 @@
       <p>Event Coordinator (Lomba Suporter Antar Kelas) — 2021–2022</p>
   </section>
 
-
   <section>
     <h2>Keahlian</h2>
       <p><b>- Desain Grafis:</b> Canva, Capcut, Figma</p>
       <p><b>- Video Editing:</b> Capcut</p>
       <p><b>- Software:</b> SAP (dasar)</p>
       <p><b>- Soft Skills:</b> Kolaborasi Tim</p>
-
   </section>
 
   <section>
@@ -72,12 +71,5 @@
     </p>
   </section>
 
-
 </body>
 </html>
-
-
-
-
-
-
